--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/qian.css">
 </head>
 
 <body>
-    <h1>hello</h1>
+    <div class="word">
+<h2>Welcome to</h2>
+<h2>山羊の前端小窝</h2>
+    </div>
+<video src="./image/synth city by VISUALDON 4K 60 FPS.mP4" loop autoplay muted>
+</video>
+    </div>
 </body>
 
 </html>
