--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="word">
 <h2>Welcome to</h2>
-<h2>山羊の前端小窝</h2>
+<h2>拂尘&文博社区</h2>
     </div>
 <video src="./image/synth city by VISUALDON 4K 60 FPS.mP4" loop autoplay muted>
 </video>
