--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2>Welcome to</h2>
 <h2>拂尘&文博社区</h2>
     </div>
-<video src="image/index/qian.mp4" loop autoplay muted>
+<video src="image/index/qian2.mp4" loop autoplay muted>
 </video>
     </div>
 </body>
