--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/qian.css">
+    <style>
+        body {
+            margin=0;
+        }
+    </style>
 </head>
 
 <body>
