--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/qian.css">
     <style>
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: rgb(252, 246, 246);
+            position: fixed;
+    top: 0;
+    width: 100%;
+        }
+
+        li {
+            float: left;
+
+        }
+
+        li a {
+            display: block;
+            color: rgb(18, 1, 1);
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            background-color: rgb(168, 180, 240);
+        }
+
+        .active {
+            background-color: #4CAF50;
+        }
+    </style>
+    <style>
         body {
             margin=0;
            
@@ -23,6 +56,26 @@
 <video src="image/index/qian2.mp4" loop autoplay muted>
 </video>
     </div>
+ <ul>
+            <li>
+                <a href="#">山羊の前端小窝</a>
+            </li>
+            <li style="float:right">
+                <a href="#">关于我们</a>
+            </li>
+            <li style="float:right">
+                <a href="#">社区进入</a>
+            </li>
+            <li style="float:right">
+                <a href="#">个人中心</a>
+            </li>
+            <li style="float:right">
+                <a href="#">创作中心</a>
+            </li>
+            <li style="float:right">
+                <a href="#">陶冶情操</a>
+            </li>
+        </ul>   
 </body>
 
 </html>
