--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: rgb(252, 246, 246);
+            background-color: transparent;
             position: fixed;
     top: 0;
     width: 100%;
