--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/qian.css">
     <style>
-        ul {
+        .uul {
             list-style-type: none;
             margin: 0;
             padding: 0;
@@ -19,12 +19,12 @@
     width: 100%;
         }
 
-        li {
+        .lli {
             float: left;
 
         }
 
-        li a {
+        .lia {
             display: block;
              color: rgb(248, 247, 247);
             text-align: center;
@@ -42,7 +42,7 @@
     </style>
     <style>
         body {
-            margin=0;
+            margin:0;
            
         }
     </style>
@@ -56,24 +56,24 @@
 <video src="image/index/qian2.mp4" loop autoplay muted>
 </video>
     </div>
- <ul>
-            <li>
+ <ul class="uul">
+            <li class=".lli">
                 <a href="#">山羊の前端小窝</a>
             </li>
-            <li style="float:right">
-                <a href="#">关于我们</a>
+            <li style="float:right" class=".lli">
+                <a class=".lia"  href="#">关于我们</a>
             </li>
-            <li style="float:right">
-                <a href="#">社区进入</a>
+            <li style="float:right" class=".lli">
+                <a class=".lia"  href="#">社区进入</a>
             </li>
-            <li style="float:right">
-                <a href="#">个人中心</a>
+            <li style="float:right" class=".lli">
+                <a class=".lia" href="#">个人中心</a>
             </li>
-            <li style="float:right">
-                <a href="#">创作中心</a>
+            <li style="float:right" class=".lli">
+                <a class=".lia" href="#">创作中心</a>
             </li>
-            <li style="float:right">
-                <a href="#">陶冶情操</a>
+            <li style="float:right" class=".lli">
+                <a class=".lia" href="#">陶冶情操</a>
             </li>
         </ul>   
 </body>
