--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/qian.css">
     <style>
-        .uul {
+        ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
@@ -19,12 +19,12 @@
     width: 100%;
         }
 
-        .lli {
+        li {
             float: left;
 
         }
 
-        .lia {
+        li a {
             display: block;
              color: rgb(248, 247, 247);
             text-align: center;
@@ -57,22 +57,22 @@
 </video>
     </div>
  <ul class="uul">
-            <li class=".lli">
+            <li >
                 <a href="#">山羊の前端小窝</a>
             </li>
-            <li style="float:right" class=".lli">
+            <li style="float:right" >
                 <a class=".lia"  href="#">关于我们</a>
             </li>
-            <li style="float:right" class=".lli">
+            <li style="float:right" >
                 <a class=".lia"  href="#">社区进入</a>
             </li>
-            <li style="float:right" class=".lli">
+            <li style="float:right" >
                 <a class=".lia" href="#">个人中心</a>
             </li>
-            <li style="float:right" class=".lli">
+            <li style="float:right" >
                 <a class=".lia" href="#">创作中心</a>
             </li>
-            <li style="float:right" class=".lli">
+            <li style="float:right">
                 <a class=".lia" href="#">陶冶情操</a>
             </li>
         </ul>   
