--- a/index.html
+++ b/index.html
@@ -7,75 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/qian.css">
-    <style>
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: transparent;
-            position: fixed;
-    top: 0;
-    width: 100%;
-        }
-
-        li {
-            float: left;
-
-        }
-
-        li a {
-            display: block;
-             color: rgb(248, 247, 247);
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        li a:hover {
-            background-color: rgb(168, 180, 240);
-        }
-
-        .active {
-            background-color: #4CAF50;
-        }
-    </style>
-    <style>
-        body {
-            margin:0;
-           
-        }
-    </style>
+    
 </head>
 
 <body>
-    <div class="word">
-<h2>Welcome to</h2>
-<h2>拂尘&文博社区</h2>
-    </div>
-<video src="image/index/qian2.mp4" loop autoplay muted>
-</video>
-    </div>
- <ul class="uul">
-            <li >
-                <a href="#">山羊の前端小窝</a>
-            </li>
-            <li style="float:right" >
-                <a class=".lia"  href="#">关于我们</a>
-            </li>
-            <li style="float:right" >
-                <a class=".lia"  href="#">社区进入</a>
-            </li>
-            <li style="float:right" >
-                <a class=".lia" href="#">个人中心</a>
-            </li>
-            <li style="float:right" >
-                <a class=".lia" href="#">创作中心</a>
-            </li>
-            <li style="float:right">
-                <a class=".lia" href="#">陶冶情操</a>
-            </li>
-        </ul>   
+    <div class="shell">
+        <div class="shell-top" style="top: -100vh;">
+            <div class="word">
+                <h2>Welcome to</h2>
+                <h2>拂尘&文博社区</h2>
+            </div>
+            <video src="qian2.mp4" loop autoplay muted>
+            </video>
+        </div>
+        <div class="shell-main" style="top: 0px;">
+
+            <div class="shell-main-nav">
+                <div class="logo">
+                    <img src="images/1.jpg" alt>
+                    <span>拂尘&文博社区</span>
+                </div>
+
+                <ul>
+
+                    <li>
+                        <a href="#">关于我们</a>
+                    </li>
+                    <li>
+                        <a href="#">社区进入</a>
+                    </li>
+                    <li>
+                        <a href="#">个人中心</a>
+                    </li>
+                    <li>
+                        <a href="#">创作中心</a>
+                    </li>
+                    <li>
+                        <a href="#">陶冶情操</a>
+                    </li>
+                    <div class="nav-box"></div>
+                </ul>
+            </div>
 </body>
 
 </html>
