--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="shell-main-nav">
                 <div class="logo">
-                    <img src="images/1.jpg" alt>
+                    <img src="image/index/1.jpg" alt>
                     <span>拂尘&文博社区</span>
                 </div>
 
