--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
 </head>
 
 <body>
-    <div class="shell">
-        <div class="shell-top" style="top: -100vh;">
+    
             <div class="word">
                 <h2>Welcome to</h2>
                 <h2>拂尘&文博社区</h2>
             </div>
-            <video src="image/index/qian2.mp4" loop autoplay muted>
+            <video src=".image/index/qian2.mp4" loop autoplay muted>
             </video>
         </div>
         <div class="shell-main" style="top: 0px;">
