--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    
+     <div class="shell">
+        <div class="shell-top" style="top: -100vh;">
             <div class="word">
                 <h2>Welcome to</h2>
                 <h2>拂尘&文博社区</h2>
