--- a/start.html
+++ b/start.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/star.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/all.css">
+
     <style>
         ul {
             list-style-type: none;
@@ -75,6 +78,7 @@
         <li style="float:right">
             <a  href="#">陶冶情操</a>
         </li>
+        <div class="nav-box"></div>
     </ul>
 </body>
 
