--- a/start.html
+++ b/start.html
@@ -54,7 +54,8 @@
 <body>
     <div class="word">
         <h2>Welcome to</h2>
-        <h2>拂尘&文博社区</h2>
+        <h2><a href="https://kklxs.github.io/fuchen">拂尘&文博社区</a></h2>
+        
     </div>
     <video src="image/index/qian2.mp4" loop autoplay muted>
     </video>
