--- a/start.html
+++ b/start.html
@@ -54,7 +54,8 @@
 <body>
     <div class="word">
         <h2>Welcome to</h2>
-        <h2><a href="https://kklxs.github.io/fuchen">拂尘&文博社区</a></h2>
+        <h2>拂尘&文博社区</h2>
+    <a href="https://kklxs.github.io/fuchen">点击进入</a>
         
     </div>
     <video src="image/index/qian2.mp4" loop autoplay muted>
@@ -62,7 +63,7 @@
     </div>
     <ul >
         <li>
-            <a href="#">山羊の前端小窝</a>
+            <a href="#">拂尘工作室</a>
         </li>
         <li style="float:right">
             <a  href="#">关于我们</a>
@@ -74,7 +75,7 @@
             <a  href="#">个人中心</a>
         </li>
         <li style="float:right">
-            <a class=".lia" href="#">创作中心</a>
+            <a  href="#">创作中心</a>
         </li>
         <li style="float:right">
             <a  href="#">陶冶情操</a>
