--- a/start.html
+++ b/start.html
@@ -55,7 +55,7 @@
     <div class="word">
         <h2>Welcome to</h2>
         <h2>拂尘&文博社区</h2>
-    <a href="https://kklxs.github.io/fuchen">点击进入</a>
+    
         
     </div>
     <video src="image/index/qian2.mp4" loop autoplay muted>
@@ -69,7 +69,7 @@
             <a  href="#">关于我们</a>
         </li>
         <li style="float:right">
-            <a  href="#">社区进入</a>
+            <a  href="#">陶冶情操</a>
         </li>
         <li style="float:right">
             <a  href="#">个人中心</a>
@@ -78,7 +78,7 @@
             <a  href="#">创作中心</a>
         </li>
         <li style="float:right">
-            <a  href="#">陶冶情操</a>
+            <a  href=""https://kklxs.github.io/fuchen"">进入社区</a>
         </li>
         <div class="nav-box"></div>
     </ul>
