--- a/start.html
+++ b/start.html
@@ -78,7 +78,7 @@
             <a  href="#">创作中心</a>
         </li>
         <li style="float:right">
-            <a  href=""https://kklxs.github.io/fuchen"">进入社区</a>
+            <a  href="https://kklxs.github.io/fuchen">进入社区</a>
         </li>
         <div class="nav-box"></div>
     </ul>
