--- a/index.html
+++ b/index.html
@@ -49,6 +49,48 @@
                     <div class="nav-box"></div>
                 </ul>
             </div>
+            <div class="shell-main-lbt">
+                <ui class="images" style="left: -100%;">
+                    <li class="img">
+                        <div class="shell-main-lbt-word"
+                            style="transform: translateY(0px); backdrop-filter: blur(5px);">
+                            <h2 style="transform:translate(0px);">KKKKKKUN</h2>
+                            <br>
+                            <span style="transform:translate(0px);">
+                                IKUNIUKNHIHIHHOHOIHIO
+                            </span>
+                        </div>
+                    <li class="img">
+                        <div class="shell-main-lbt-word"
+                            style="transform: translateY(0px); backdrop-filter: blur(5px);">
+                            <h2 style="transform:translate(0px);">hi hi hi i和快来看快来看</h2>
+                            <br>
+                            <span style="transform:translate(0px);">
+                                说法Kiki Kiki看看i
+                            </span>
+                    <li class="img">
+                        <div class="shell-main-lbt-word"
+                            style="transform: translateY(0px); backdrop-filter: blur(5px);">
+                            <h2 style="transform:translate(0px);">文博社区</h2>
+                            <br>
+                            <span style="transform:translate(0px);">
+                                说法
+                            </span>
+                        </div>
+
+                    </li>
+                </ui>
+                <ui class="min-images">
+                    <li class="min"></li>
+                    <li class="min"></li>
+                    <li class="min"></li>
+                </ui>
+                <div class="button">
+                    <div class="button-left">&lt;
+                    </div>
+                    <div class="button-right">></div>
+                </div>
+            </div>
 </body>
 
 </html>
