--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     <li class="img">
                         <div class="shell-main-lbt-word"
                             style="transform: translateY(0px); backdrop-filter: blur(5px);">
-                            <h2 style="transform:translate(0px);">hi hi hi i和快来看快来看</h2>
+                            <h2 style="transform:translate(0px);">文博社区</h2>
                             <br>
                             <span style="transform:translate(0px);">
-                                说法Kiki Kiki看看i
+                                在这里，你可以和志同道合的人进行交流
                             </span>
                     <li class="img">
                         <div class="shell-main-lbt-word"
