--- a/index.html
+++ b/index.html
@@ -91,6 +91,86 @@
                     <div class="button-right">></div>
                 </div>
             </div>
+                <div class="shell-main-header">
+                <div class="shell-main-header-left">
+                    <div class="shell-main-header-left-top">
+                        <h2>这</h2>
+                        <span>是文博爱好者的交流平台<br />是文物二创的社区</span>
+                    </div>
+                    <div class="shell-main-header-left-bottom">
+                        <span
+                            style="color: rgb(132, 117, 117);">欢迎来到拂尘，在这里，你可以浏览文博界最新咨询，与文博爱好者交流分享...<br />或许你也可以进行文物的二次创作，发现更多美好</span><br /><br />
+                        <span style="font-family: font;">Welcome to the Fuchen, here, you can browse the latest
+                            consultation in
+                            the cultural industry, and cultural lovers exchange to share<br /> maybe you
+                            can also make the secondary creation of cultural relics and find more beauty</span>
+                    </div>
+                    <div class="shell-main-header-left-footer">
+                        <p style="color: rgb(66, 63, 63);">-------拂尘 </p>
+                    </div>
+                </div>
+                <div class="shell-main-header-right"></div>
+            </div>
+                 <div class="shell-main-bottom">
+                <h2>
+                    <span>兴</span>
+                    "趣部落"
+
+                </h2>
+                <div class="shell-main-bottom-bottom">
+                    <ul>
+                        <li>
+                            <img src="./images/a.jpg" alt>
+                            <h2>文物修复：</h2>
+                            <span>专业人士在此共同交流，巴拉巴拉巴拉巴拉</span>
+
+                        </li>
+                        <li>
+                            <img src="./images/a.jpg" alt>
+                            <h2>随便逛逛：</h2>
+                            <span>专业人士在此共同交流，巴拉巴拉巴拉巴拉</span>
+
+                        </li>
+                        <li>
+                            <img src="./images/c.jpg" alt>
+                            <h2>一条咸鱼：</h2>
+                            <span>专业人士在此共同交流，巴拉巴拉巴拉巴拉</span>
+
+                        </li>
+                        <li>
+                            <img src="./images/d.jpg" alt>
+                            <h2>嘻嘻哈哈：</h2>
+                            <span>专业人士在此共同交流，巴拉巴拉巴拉巴拉</span>
+
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="shell-main-content">
+                <div class="shell-main-content-left">
+                    <h2>Number of<br />our fans</h2>
+                    <div class="shell-main-content-left-fans">
+                        <ul>
+                            <li><img src="./image/tx (1).jpg" alt=""></li>
+                            <li><img src="./image/tx (2).jpg" alt=""></li>
+                            <li><img src="./image/tx (3).jpg" alt=""></li>
+                            <li><img src="./image/tx (4).jpg" alt=""></li>
+                            <li><img src="./image/tx (5).jpg" alt=""></li>
+                            <li><img src="./image/tx (6).jpg" alt=""></li>
+                            <li><img src="./image/tx (7).jpg" alt=""></li>
+                            <li><img src="./image/tx (8).jpg" alt=""></li>
+                            <li><span>•••
+                                </span></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="shell-main-content-right">
+                    <h2>常驻平台：Bilibili 抖音 微博 微信视频号</h2>
+                    <span>以文博宣传为主的知识分享区up主</span>
+                    <img src="./image/fs.jpg" alt="">
+                </div>
+            </div>
 </body>
 
 </html>
