--- a/index.html
+++ b/index.html
@@ -120,25 +120,25 @@
                 <div class="shell-main-bottom-bottom">
                     <ul>
                         <li>
-                            <img src="./images/a.jpg" alt>
+                            <img src="./image/a.jpg" alt>
                             <h2>文物修复：</h2>
                             <span>专业人士在此共同交流，巴拉巴拉巴拉巴拉</span>
 
                         </li>
                         <li>
-                            <img src="./images/a.jpg" alt>
+                            <img src="./image/a.jpg" alt>
                             <h2>随便逛逛：</h2>
                             <span>专业人士在此共同交流，巴拉巴拉巴拉巴拉</span>
 
                         </li>
                         <li>
-                            <img src="./images/c.jpg" alt>
+                            <img src="./image/c.jpg" alt>
                             <h2>一条咸鱼：</h2>
                             <span>专业人士在此共同交流，巴拉巴拉巴拉巴拉</span>
 
                         </li>
                         <li>
-                            <img src="./images/d.jpg" alt>
+                            <img src="./image/d.jpg" alt>
                             <h2>嘻嘻哈哈：</h2>
                             <span>专业人士在此共同交流，巴拉巴拉巴拉巴拉</span>
 
