--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="shell-main-bottom-bottom">
                     <ul>
                         <li>
-                            <img src="./image/a.jpg" alt>
+                            <img src="./image/b.jpg" alt>
                             <h2>文物修复：</h2>
                             <span>专业人士在此共同交流，巴拉巴拉巴拉巴拉</span>
 
