--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="shell-main-header-left">
                     <div class="shell-main-header-left-top">
                         <h2>这</h2>
-                        <span>是文博爱好者的交流平台,是文物二创的社区</span>
+                        <span>是文博爱好者的交流平台&二创的社区</span>
                     </div>
                     <div class="shell-main-header-left-bottom">
                         <span
